Used media query to make UI responsive

--- a/src/about.html
+++ b/src/about.html
@@ -25,18 +25,20 @@
             /></a>
           </div>
           <div class="hamburger-menu">
-            <button><i class="fa-solid fa-bars"></i></button>
-          </div>
-          <div>
-            <ul>
-              <li><a href="index1.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li>
-                <a href="portfolio1.html">Portfolio</a>
-              </li>
-              <li><a href="skills1.html">Skills</a></li>
-              <li><a href="contact-me.html">Contact Me</a></li>
-            </ul>
+            <i class="fa-solid fa-bars hamburger-icon"></i>
+            <div class="hamburger-content">
+              <ul>
+                <li class="nav-list"><a href="home.html">Home</a></li>
+                <li class="nav-list"><a href="#">About</a></li>
+                <li class="nav-list">
+                  <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-list"><a href="skills.html">Skills</a></li>
+                <li class="nav-list">
+                  <a href="contact.html">Contact Me</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
@@ -44,29 +46,31 @@
 
     <main>
       <div>
-        <video src="Images/timelapse.mp4" controls loop>Hills</video>
-        <div class="about">
-          <h2 class="headers">About Me</h2>
-          <p class="content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea dolorum
-            vero, molestias doloremque atque dicta dignissimos ipsa,
-            reprehenderit error inventore voluptate recusandae quidem,
-            temporibus amet expedita repudiandae?
-          </p>
-          <p class="content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea dolorum
-            vero, molestias doloremque atque dicta dignissimos ipsa,
-            reprehenderit error inventore voluptate recusandae quidem,
-            temporibus amet expedita repudiandae?
-          </p>
-          <a class="call-to-action-button download" href="#" download="#">
-            <i class="fa-solid fa-download"></i>
-            Download Resume
-          </a>
+        <div class="about-vid">
+          <video src="Images/timelapse.mp4" controls loop>Hills</video>
+          <div class="about">
+            <h2 class="headers">About Me</h2>
+            <p class="content">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
+              dolorum vero, molestias doloremque atque dicta dignissimos ipsa,
+              reprehenderit error inventore voluptate recusandae quidem,
+              temporibus amet expedita repudiandae?
+            </p>
+            <p class="content">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
+              dolorum vero, molestias doloremque atque dicta dignissimos ipsa,
+              reprehenderit error inventore voluptate recusandae quidem,
+              temporibus amet expedita repudiandae?
+            </p>
+            <a class="call-to-action-button download" href="#" download="#">
+              <i class="fa-solid fa-download"></i>
+              Download Resume
+            </a>
+          </div>
         </div>
 
         <!--Education and Experience-->
-        <section>
+        <section class="education-work">
           <h2 class="headers">My Education and Work Experience</h2>
           <div class="edu">
             <h3>Education</h3>
