--- a/src/home.html
+++ b/src/home.html
@@ -30,10 +30,10 @@
                   <li class="nav-list"><a href="#">Home</a></li>
                   <li class="nav-list"><a href="about.html">About</a></li>
                   <li class="nav-list">
-                    <a href="portfolio1.html">Portfolio</a>
+                    <a href="portfolio.html">Portfolio</a>
                   </li>
-                  <li class="nav-list"><a href="skills1.html">Skills</a></li>
-                  <li class="nav-list"><a href="contact-me.html">Contact Me</a></li>
+                  <li class="nav-list"><a href="skills.html">Skills</a></li>
+                  <li class="nav-list"><a href="contact.html">Contact Me</a></li>
                 </ul>
               </div>
             </div>
@@ -83,7 +83,7 @@
 
     <!-- Footer Area -->
     <footer>
-      <div>
+      <div class="logo-socials">
         <div class="end-logo">
           <a href="#"><img class="logo" src="Images/rsz_logo.png" alt="Logo"
             /></a>
@@ -131,7 +131,7 @@
       </div>
       <div class="copyright">
         <p>Copyright 2023. All Rights Reserved</p>
-        <p>Powered by Simon</p>
+        <p class="powered">Powered by Simon</p>
       </div>
     </footer>
   </body>
