--- a/src/skills.html
+++ b/src/skills.html
@@ -25,78 +25,83 @@
             /></a>
           </div>
           <div class="hamburger-menu">
-            <button><i class="fa-solid fa-bars"></i></button>
-          </div>
-          <div>
-            <ul>
-              <li><a href="index1.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li>
-                <a href="portfolio1.html">Portfolio</a>
-              </li>
-              <li><a href="#">Skills</a></li>
-              <li><a href="contact-me.html">Contact Me</a></li>
-            </ul>
+            <i class="fa-solid fa-bars hamburger-icon"></i>
+            <div class="hamburger-content">
+              <ul>
+                <li class="nav-list"><a href="home.html">Home</a></li>
+                <li class="nav-list"><a href="about.html">About</a></li>
+                <li class="nav-list">
+                  <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-list"><a href="#">Skills</a></li>
+                <li class="nav-list">
+                  <a href="contact.html">Contact Me</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
     </header>
     <main>
       <!-- Skills Area -->
-      <section>
-        <div>
-          <h2 class="headers">Skills</h2>
-          <div class="desc">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-              sunt nesciunt, quod deleniti alias molestiae.
-            </p>
+      <section class="skill-section">
+        <div class="skills-image">
+          <div class="skill-desc">
+            <h2 class="headers">Skills</h2>
+            <div class="desc">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+                sunt nesciunt, quod deleniti alias molestiae.
+              </p>
+            </div>
+          </div>
+          <!--Skills-->
+          <div class="skillz">
+            <div>
+              <div>
+                <h3>Web Development</h3>
+              </div>
+              <div class="progress-bar">
+                <div class="skill web">89%</div>
+              </div>
+            </div>
+            <div>
+              <div>
+                <h3>UI/UX Design</h3>
+              </div>
+              <div class="progress-bar">
+                <div class="skill ui">91%</div>
+              </div>
+            </div>
+            <div>
+              <div>
+                <h3>App Design</h3>
+              </div>
+              <div class="progress-bar">
+                <div class="skill app">80%</div>
+              </div>
+            </div>
+            <div>
+              <div>
+                <h3>Problem Solving</h3>
+              </div>
+              <div class="progress-bar">
+                <div class="skill problem-solving">83%</div>
+              </div>
+            </div>
           </div>
         </div>
-
-        <!--Skills-->
-
-        <div class="skillz">
-          <div>
-            <div>
-              <h3>Web Development</h3>
-            </div>
-            <div class="progress-bar">
-              <div class="skill web">89%</div>
-            </div>
-          </div>
-          <div>
-            <div>
-              <h3>UI/UX Design</h3>
-            </div>
-            <div class="progress-bar">
-              <div class="skill ui">91%</div>
-            </div>
-          </div>
-          <div>
-            <div>
-              <h3>App Design</h3>
-            </div>
-            <div class="progress-bar">
-              <div class="skill app">80%</div>
-            </div>
-          </div>
-          <div>
-            <div>
-              <h3>Problem Solving</h3>
-            </div>
-            <div class="progress-bar">
-              <div class="skill problem-solving">83%</div>
-            </div>
-          </div>
-        </div>
+        <aside class="image-aside">
+          <img src="Images/cat_small.jpg" alt="" />
+        </aside>
       </section>
 
       <!-- Testimonials -->
       <section>
         <div class="testimonials">
           <h2 class="headers">Testimonials</h2>
-          <div class="single-testimonial">
+          <div class="single-testimonial sami">
             <div class="test-head">
               <div class="quote-icon">
                 <i class="fa-solid fa-quote-left"></i>
@@ -132,7 +137,7 @@
               </q>
             </div>
           </div>
-          <div class="single-testimonial">
+          <div class="single-testimonial sami">
             <div class="test-head">
               <div class="quote-icon">
                 <i class="fa-solid fa-quote-left"></i>
@@ -150,7 +155,7 @@
               </q>
             </div>
           </div>
-          <div class="single-testimonial">
+          <div class="single-testimonial center">
             <div class="test-head">
               <div class="quote-icon">
                 <i class="fa-solid fa-quote-left"></i>
