--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -25,18 +25,20 @@
             /></a>
           </div>
           <div class="hamburger-menu">
-            <button><i class="fa-solid fa-bars"></i></button>
-          </div>
-          <div>
-            <ul>
-              <li><a href="index1.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li>
-                <a href="#">Portfolio</a>
-              </li>
-              <li><a href="skills1.html">Skills</a></li>
-              <li><a href="contact-me.html">Contact Me</a></li>
-            </ul>
+            <i class="fa-solid fa-bars hamburger-icon"></i>
+            <div class="hamburger-content">
+              <ul>
+                <li class="nav-list"><a href="home.html">Home</a></li>
+                <li class="nav-list"><a href="about.html">About</a></li>
+                <li class="nav-list">
+                  <a href="#">Portfolio</a>
+                </li>
+                <li class="nav-list"><a href="skills.html">Skills</a></li>
+                <li class="nav-list">
+                  <a href="contact.html">Contact Me</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
@@ -53,101 +55,117 @@
             </p>
           </div>
         </div>
-        <div class="project-filter">
-          <ul>
-            <li>All Projects</li>
-            <li>UI/UX Design</li>
-            <li>Web Development</li>
-            <li>App Developement</li>
-          </ul>
+        <div class="filter-wrapper">
+          <div class="project-filter">
+            <ul>
+              <li>All Projects</li>
+              <li>UI/UX Design</li>
+              <li>Web Development</li>
+              <li>App Developement</li>
+            </ul>
+          </div>
         </div>
 
-        <div class="project-container">
-          <figure>
-            <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
-          </figure>
-          <div class="project-center-content">
-            <div class="port-text">
-              <div>
-                <h3><a href="port-details (1).html">Project 1</a></h3>
-              </div>
-              <div class="desc">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="project-container">
-          <figure>
-            <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
-          </figure>
-          <div class="project-center-content">
-            <div class="port-text">
-              <div>
-                <h3><a href="port-details (2).html">Project 2</a></h3>
-              </div>
-              <div class="desc">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <div class="total-project-container">
+          <div class="project-container">
+            <figure>
+              <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
+            </figure>
+            <div class="project-center-content">
+              <div class="port-text">
+                <div>
+                  <h3><a href="port-details (1).html">Project 1</a></h3>
+                </div>
+                <div class="desc">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="project-container">
-          <figure>
-            <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
-          </figure>
-          <div class="project-center-content">
-            <div class="port-text">
-              <div>
-                <h3><a href="port-details (3).html">Project 3</a></h3>
-              </div>
-              <div class="desc">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="project-container">
-          <figure>
-            <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
-          </figure>
-          <div class="project-center-content">
-            <div class="port-text">
-              <div>
-                <h3><a href="port-details (4).html">Project 4</a></h3>
-              </div>
-              <div class="desc">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+          <div class="project-container">
+            <figure>
+              <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
+            </figure>
+            <div class="project-center-content">
+              <div class="port-text">
+                <div>
+                  <h3><a href="port-details (2).html">Project 2</a></h3>
+                </div>
+                <div class="desc">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="project-container">
-          <figure>
-            <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
-          </figure>
-          <div class="project-center-content">
-            <div class="port-text">
-              <div>
-                <h3><a href="port-details (5).html">Project 5</a></h3>
-              </div>
-              <div class="desc">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+          <div class="project-container">
+            <figure>
+              <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
+            </figure>
+            <div class="project-center-content">
+              <div class="port-text">
+                <div>
+                  <h3><a href="port-details (3).html">Project 3</a></h3>
+                </div>
+                <div class="desc">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="project-container">
-          <figure>
-            <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
-          </figure>
-          <div class="project-center-content">
-            <div class="port-text">
-              <div>
-                <h3><a href="port-details (6).html">Project 6</a></h3>
+          <div class="project-container">
+            <figure>
+              <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
+            </figure>
+            <div class="project-center-content">
+              <div class="port-text">
+                <div>
+                  <h3><a href="port-details (4).html">Project 4</a></h3>
+                </div>
+                <div class="desc">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                </div>
               </div>
-              <div class="desc">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            </div>
+          </div>
+          <div class="project-container">
+            <figure>
+              <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
+            </figure>
+            <div class="project-center-content">
+              <div class="port-text">
+                <div>
+                  <h3><a href="port-details (5).html">Project 5</a></h3>
+                </div>
+                <div class="desc">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project-container">
+            <figure>
+              <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
+            </figure>
+            <div class="project-center-content">
+              <div class="port-text">
+                <div>
+                  <h3><a href="port-details (6).html">Project 6</a></h3>
+                </div>
+                <div class="desc">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
